# argus

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DECISIONS.md  FAILURES.md  HANDOFF.md  README.md  STATE.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
argus/: __init__.py  __main__.py  alerts.py  checks.py  clock.py  db.py  ingest.py  monitor.py  scheduling.py  schema.sql  server.py
argus/templates/: dashboard.html
docker/: Dockerfile
tests/: conftest.py  test_alerts.py  test_checks.py  test_db.py  test_ingest.py  test_monitor.py  test_scheduling.py  test_server.py
